[gd_scene load_steps=10 format=2]

[ext_resource path="res://enemy.gd" type="Script" id=1]
[ext_resource path="res://enemies/slimeBlue_blue.png" type="Texture" id=2]
[ext_resource path="res://enemies/slimeBlue.png" type="Texture" id=3]
[ext_resource path="res://enemies/slimeBlue_squashed.png" type="Texture" id=4]
[ext_resource path="res://sounds/pepSound2.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.2048, 12.2955 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "squash",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "crawl",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19.9306, 3.88502 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 26.3621, 10 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.361217, 3.62783 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.210224, 0 )
frames = SubResource( 2 )
animation = "crawl"
frame = 1
playing = true
__meta__ = {
"_edit_group_": true
}

[node name="floorchecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( -0.310558, -13.2775 )
shape = SubResource( 3 )

[node name="side_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="side_checker"]
position = Vector2( 0.198425, 5.75433 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SoundSquash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 10.0
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="side_checker" to="." method="_on_side_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
